# sht3x_temperature_reader

./: .gitignore  .gitmodules  BEAGLEBONE_CONFIG.md  IMPLEMENTATION_SUMMARY.md  IMXRT1050_CONFIG.md  Makefile  README.md  main.c  pl_config.h  pl_hw_config.c  pl_hw_config.h  run_beaglebone.sh  sht3x.c  sht3x.h  udp_sender.c  udp_sender.h
cmake/: CMakeLists.txt
cmake/src/: Makefile  main.c  pl_config.h
mcuxpresso/imxrt1050-evk/: .cproject  .project
mcuxpresso/imxrt1050-evk/source/: FreeRTOSConfig.h  main.c  pl_config.h  pl_hw_config.c
mcuxpresso/teensy/: .cproject  .project
mcuxpresso/teensy/source/: FreeRTOSConfig.h  board_config.h  main.c  pl_config.h  pl_hw_config.c
mcuxpresso/teensy/source/board/: board.h  pin_mux.c  pin_mux.h
platform/OS/lwip/port/: enet_ethernetif_kinetis.c  ethernetif.h
platform/OS/lwip/src/include/lwip/: opt.h
platform/imxrt1052/board/: pin_mux.c
platform/imxrt1052/xip/: evkbimxrt1050_flexspi_nor_config.c  fsl_flexspi_nor_boot.c
platform/imxrt1062/component/phy/: fsl_phydp83825.c  fsl_phydp83825.h
platform/imxrt1062/drivers/: fsl_enet.c
sht3x_reader/: board_config.h  debug_console.h  system_init.c  system_init.h  system_supervisor.c  watchdog.c  watchdog.h
sht3x_reader/board/: SHT3x.c  SHT3x.h  board_types.h  mdio_phydp83825.c  mdio_phydp83825.h
sht3x_reader/comm/: comm.c  comm.h
sht3x_reader/debug/: debug_task.c  debug_task.h
sht3x_reader/tempreader/: tempreader.c  tempreader.h
yocto/: CMakeLists.txt
yocto/src/: main.c  pl_config.h  pl_hw_config.c  pl_hw_config.h
